[package]
name = "rgrpc"
version = "0.1.0"
authors = ["Михаил Журавлёв<i@mfzhuravlev.ru>"]
edition = "2021"

[[bin]]
name = "log-server"
path = "src/server.rs"

[[bin]]
name = "log-client"
path = "src/main.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9.2"
